--- a/webapps/landlord/locales/pt-BR/common.json
+++ b/webapps/landlord/locales/pt-BR/common.json
@@ -219,6 +219,7 @@
   "Mandatory only when contract is terminated": "Mandatory only when contract is terminated",
   "Modifying this form might break the contract signed with the tenant": "Modifying this form might break the contract signed with the tenant",
   "months": "months",
+  "Mpesa": "Mpesa",
   "Name": "Name",
   "Name of business or institution": "Name of business or institution",
   "New application": "New application",
