feature: Added functionality to add multiple expenses

--- a/webapps/landlord/locales/en/common.json
+++ b/webapps/landlord/locales/en/common.json
@@ -19,6 +19,7 @@
   "Add a property": "Add a property",
   "Add a settlement": "Add a settlement",
   "Add a tenant": "Add a tenant",
+  "Add a expense": "Add a expense",
   "Add an application credential to your organization": "Add an application credential to your organization",
   "Add your tenant's details to link them to the property and contract model, finalizing the lease setup.": "Add your tenant's details to link them to the property and contract model, finalizing the lease setup.",
   "Additional cost": "Additional cost",
@@ -148,6 +149,7 @@
   "Error updating organization": "Error updating organization",
   "Exit date": "Exit date",
   "Expense": "Expense",
+  "Expense #{{count}}": "Expense #{{count}}",
   "Expenses": "Expenses",
   "expired document": "expired document",
   "expiry {{relativeDate}}": "expiry {{relativeDate}}",
@@ -227,7 +229,6 @@
   "Mandatory only when contract is terminated": "Mandatory only when contract is terminated",
   "Modifying this form might break the contract signed with the tenant": "Modifying this form might break the contract signed with the tenant",
   "months": "months",
-  "Mpesa": "Mpesa",
   "Name": "Name",
   "Name of business or institution": "Name of business or institution",
   "New application": "New application",
